syntax = "proto3";

option go_package = "github.com/clintjedwards/hclvet/plugin/proto";

package proto;

// RuleInfo is a representation of the data that governs a single linting rule.
message RuleInfo {
  string name = 1;
  string short = 2;
  string long = 3;
  bool enabled = 4;
  string error = 5; // short description on what the error is
  string link = 6;  // link to further documentation
}

message Position {
  uint32 line = 1;
  uint32 column = 2;
}

message Location {
  Position start = 1;
  Position end = 2;
}

message RuleError {
  // a description of possible remediation for error
  string suggestion = 1;
  string remediation = 2; // program code for possible remediation
  Location location = 3;  // start and end range of where error occurred
  // metadata is a key value store that allows the rule to include extra data,
  // that can be used by any tooling consuming said rule. For example "severity"
  // might be something included in metadata.
  map<string, string> metadata = 4;
}

service HCLvetRulePlugin {
  rpc GetRuleInfo(GetRuleInfoRequest) returns(GetRuleInfoResponse);
  rpc ExecuteRule(ExecuteRuleRequest) returns(ExecuteRuleResponse);
}

message GetRuleInfoRequest {}
message GetRuleInfoResponse { RuleInfo rule_info = 1; }

// ExecuteRuleRequest passes the byte string representation of an HCL file body.
// It can be turned back into an hclwrite.File.Body object on reception.
//
// Expected back is a list of errors (if any) for the file passed to the plugin.
message ExecuteRuleRequest { bytes hcl_file = 1; }
message ExecuteRuleResponse { repeated RuleError errors = 1; }
